--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 1000px) {
     .inputs{
         font-size: 24px;
         
